# agent-inbox

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yaml
.kittify/: agent_profiles_manifest.json  canonical-events.jsonl  config.yaml  metadata.yaml  mission-brief.md
.kittify/charter/: charter.md
agent-mailbox-old/: README.md
docs/: agent-onboarding.md  agent-prompt.md  coding-standards.md  configuration.md  hosting.md  inbox-check-snippet.md  mcp-clients.md
docs/decisions/: 0001-nats-jetstream-mailbox.md  0003-identity-is-a-surrogate-key.md  0004-activitystreams-messaging-model.md  0005-one-api-every-client-is-a-client.md  0006-sqlite-hybrid-storage.md
docs/missions/: 0003-wait-for-message.md  0005-human-web-ui.md  0006-prompt-catalog-and-host.md  0008-flow-graph.md  0010-installability.md  0014-fallback-cli.md  0015-public-notices.md  0016-gc-decapitates-threads.md  0017-channels-push.md  0029-competitive-survey.md  0030-version-compatibility.md  0031-console-sidecar.md  README.md
docs/research/: competitive-survey-prompt.md
kitty-specs/cli-primary-client-01KYA42E/: lanes.json  meta.json  spec.md  tasks.md
tests/: test_addressing.py  test_api.py  test_cli.py  test_conf_file.py  test_config.py  test_console.py  test_identity.py  test_integration.py  test_mailbox.py  test_models.py  test_naming.py  test_package.py  test_prompts.py  test_rules.py  test_sqlite_store.py  test_webui.py
tools/: cook_name_pool.py
(+58 files in other folders)
